
    * NEW: Hexadecimal floating point storage. Preserves 100% accuracy in song files.
      Used where appropriate (too many decimal digits).
      Both hex and decimal values can be mixed (manual decimal entry for example).
      Applied to audio controller values and graphs for now. More later.
      C/C++ have supported hex floats for many years. But Qt doesn't seem to natively.

    * NEW: LV2 midi-out support added. Supports things like midi arpeggiators, midi effects etc.

    Fixed: VST midi-out: Recording times were way off. (Midi arpeggiators, midi effects etc.)
    Added: Latency correction for VST midi-out.

    Fixed: Crash in undo/redo system: Major regression several months ago.
    For example delete a part or track, then undo redo etc. caused crash.
    Rewrote undo's clearDelete() and deleteUndoOp() routines.

    Fixed: Crash when removing or replacing plugins from rack.
    Some heavy graphics moves were being done in realtime thread.

    Fixed: Crash in track list TList::mouseReleaseEvent() when track is NULL.

    Fixed: Crash in midi/synth configuration dialog when clicking on port device column.
    Popup's action text was being read AFTER the popup was deleted.
    Seems to be my fault from 2019 according to annotations?

    Fixed: Crashes in remaining places calling wrong undo constructor. See 06.12.2022

    Fixed: Occasional show-stopping glitch when recording or live-monitoring midi:
    Notes would become badly timed, very old notes would play along with new ones in a
     weird 'cycling' effect, requiring restart.
    Replaced old class MidiRecFifo with more recent LockFreeMPSCRingBuffer<MidiRecordEvent>.
    Caught old class skipping read position and mis-reporting the size, leaving a messed-up state.
    It was concluded that this may have been an concurrency/atomic problem.
    LockFreeMPSCRingBuffer was added few years ago. It has worked flawlessly so far.